// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`record form columns does treats a negative value as 1 1`] = `
<lightning-record-form>
  #shadow-root(open)
    <lightning-record-edit-form>
      #shadow-root(open)
        <form>
          <slot />
        </form>
      <div
        class="slds-form"
        role="list"
      >
        <lightning-messages>
          #shadow-root(open)
        </lightning-messages>
        <div
          class="slds-is-relative record-form-spinner-holder"
        >
          <lightning-spinner
            class="slds-spinner_container"
          >
            #shadow-root(open)
              <div
                class="slds-spinner slds-spinner_medium"
                role="status"
              >
                <span
                  class="slds-assistive-text"
                >
                  Loading
                </span>
                <div
                  class="slds-spinner__dot-a"
                />
                <div
                  class="slds-spinner__dot-b"
                />
              </div>
          </lightning-spinner>
          <div
            class="slds-grid slds-gutters_small"
          >
            <div
              class="slds-col slds-has-flexi-truncate"
              role="listitem"
            >
              <lightning-input-field
                class="slds-form-element_1-col"
              >
                #shadow-root(open)
                  <p>
                    Name
                  </p>
              </lightning-input-field>
            </div>
          </div>
          <div
            class="slds-grid slds-gutters_small"
          >
            <div
              class="slds-col slds-has-flexi-truncate"
              role="listitem"
            >
              <lightning-input-field
                class="slds-form-element_1-col"
              >
                #shadow-root(open)
                  <p>
                    BillingAddress
                  </p>
              </lightning-input-field>
            </div>
          </div>
        </div>
        <div
          class="slds-align_absolute-center slds-p-around_medium"
        >
          <lightning-button
            class="slds-m-around_xx-small lightning-record-form-cancel"
          >
            #shadow-root(open)
              <button
                class="slds-button slds-button_neutral"
                name="cancel"
                type="button"
              >
                Cancel
              </button>
          </lightning-button>
          <lightning-button
            class="slds-m-around_xx-small lightning-record-form-submit"
          >
            #shadow-root(open)
              <button
                class="slds-button slds-button_brand"
                name="submit"
                type="submit"
              >
                Save
              </button>
          </lightning-button>
        </div>
      </div>
    </lightning-record-edit-form>
</lightning-record-form>
`;

exports[`record form columns renders two columns 1`] = `
<lightning-record-form>
  #shadow-root(open)
    <lightning-record-edit-form>
      #shadow-root(open)
        <form>
          <slot />
        </form>
      <div
        class="slds-form"
        role="list"
      >
        <lightning-messages>
          #shadow-root(open)
        </lightning-messages>
        <div
          class="slds-is-relative record-form-spinner-holder"
        >
          <lightning-spinner
            class="slds-spinner_container"
          >
            #shadow-root(open)
              <div
                class="slds-spinner slds-spinner_medium"
                role="status"
              >
                <span
                  class="slds-assistive-text"
                >
                  Loading
                </span>
                <div
                  class="slds-spinner__dot-a"
                />
                <div
                  class="slds-spinner__dot-b"
                />
              </div>
          </lightning-spinner>
          <div
            class="slds-grid slds-gutters_small"
          >
            <div
              class="slds-col slds-has-flexi-truncate"
              role="listitem"
            >
              <lightning-input-field>
                #shadow-root(open)
                  <p>
                    Name
                  </p>
              </lightning-input-field>
            </div>
            <div
              class="slds-col slds-has-flexi-truncate"
              role="listitem"
            >
              <lightning-input-field>
                #shadow-root(open)
                  <p>
                    BillingAddress
                  </p>
              </lightning-input-field>
            </div>
          </div>
        </div>
        <div
          class="slds-align_absolute-center slds-p-around_medium"
        >
          <lightning-button
            class="slds-m-around_xx-small lightning-record-form-cancel"
          >
            #shadow-root(open)
              <button
                class="slds-button slds-button_neutral"
                name="cancel"
                type="button"
              >
                Cancel
              </button>
          </lightning-button>
          <lightning-button
            class="slds-m-around_xx-small lightning-record-form-submit"
          >
            #shadow-root(open)
              <button
                class="slds-button slds-button_brand"
                name="submit"
                type="submit"
              >
                Save
              </button>
          </lightning-button>
        </div>
      </div>
    </lightning-record-edit-form>
</lightning-record-form>
`;

exports[`record form columns renders two columns with a string value 1`] = `
<lightning-record-form>
  #shadow-root(open)
    <lightning-record-edit-form>
      #shadow-root(open)
        <form>
          <slot />
        </form>
      <div
        class="slds-form"
        role="list"
      >
        <lightning-messages>
          #shadow-root(open)
        </lightning-messages>
        <div
          class="slds-is-relative record-form-spinner-holder"
        >
          <lightning-spinner
            class="slds-spinner_container"
          >
            #shadow-root(open)
              <div
                class="slds-spinner slds-spinner_medium"
                role="status"
              >
                <span
                  class="slds-assistive-text"
                >
                  Loading
                </span>
                <div
                  class="slds-spinner__dot-a"
                />
                <div
                  class="slds-spinner__dot-b"
                />
              </div>
          </lightning-spinner>
          <div
            class="slds-grid slds-gutters_small"
          >
            <div
              class="slds-col slds-has-flexi-truncate"
              role="listitem"
            >
              <lightning-input-field>
                #shadow-root(open)
                  <p>
                    Name
                  </p>
              </lightning-input-field>
            </div>
            <div
              class="slds-col slds-has-flexi-truncate"
              role="listitem"
            >
              <lightning-input-field>
                #shadow-root(open)
                  <p>
                    BillingAddress
                  </p>
              </lightning-input-field>
            </div>
          </div>
        </div>
        <div
          class="slds-align_absolute-center slds-p-around_medium"
        >
          <lightning-button
            class="slds-m-around_xx-small lightning-record-form-cancel"
          >
            #shadow-root(open)
              <button
                class="slds-button slds-button_neutral"
                name="cancel"
                type="button"
              >
                Cancel
              </button>
          </lightning-button>
          <lightning-button
            class="slds-m-around_xx-small lightning-record-form-submit"
          >
            #shadow-root(open)
              <button
                class="slds-button slds-button_brand"
                name="submit"
                type="submit"
              >
                Save
              </button>
          </lightning-button>
        </div>
      </div>
    </lightning-record-edit-form>
</lightning-record-form>
`;

exports[`record form columns rounds a non-integer value 1`] = `
<lightning-record-form>
  #shadow-root(open)
    <lightning-record-edit-form>
      #shadow-root(open)
        <form>
          <slot />
        </form>
      <div
        class="slds-form"
        role="list"
      >
        <lightning-messages>
          #shadow-root(open)
        </lightning-messages>
        <div
          class="slds-is-relative record-form-spinner-holder"
        >
          <lightning-spinner
            class="slds-spinner_container"
          >
            #shadow-root(open)
              <div
                class="slds-spinner slds-spinner_medium"
                role="status"
              >
                <span
                  class="slds-assistive-text"
                >
                  Loading
                </span>
                <div
                  class="slds-spinner__dot-a"
                />
                <div
                  class="slds-spinner__dot-b"
                />
              </div>
          </lightning-spinner>
          <div
            class="slds-grid slds-gutters_small"
          >
            <div
              class="slds-col slds-has-flexi-truncate"
              role="listitem"
            >
              <lightning-input-field>
                #shadow-root(open)
                  <p>
                    Name
                  </p>
              </lightning-input-field>
            </div>
            <div
              class="slds-col slds-has-flexi-truncate"
              role="listitem"
            >
              <lightning-input-field>
                #shadow-root(open)
                  <p>
                    BillingAddress
                  </p>
              </lightning-input-field>
            </div>
          </div>
        </div>
        <div
          class="slds-align_absolute-center slds-p-around_medium"
        >
          <lightning-button
            class="slds-m-around_xx-small lightning-record-form-cancel"
          >
            #shadow-root(open)
              <button
                class="slds-button slds-button_neutral"
                name="cancel"
                type="button"
              >
                Cancel
              </button>
          </lightning-button>
          <lightning-button
            class="slds-m-around_xx-small lightning-record-form-submit"
          >
            #shadow-root(open)
              <button
                class="slds-button slds-button_brand"
                name="submit"
                type="submit"
              >
                Save
              </button>
          </lightning-button>
        </div>
      </div>
    </lightning-record-edit-form>
</lightning-record-form>
`;

exports[`record form columns treats a NaN value as 1 1`] = `
<lightning-record-form>
  #shadow-root(open)
    <lightning-record-edit-form>
      #shadow-root(open)
        <form>
          <slot />
        </form>
      <div
        class="slds-form"
        role="list"
      >
        <lightning-messages>
          #shadow-root(open)
        </lightning-messages>
        <div
          class="slds-is-relative record-form-spinner-holder"
        >
          <lightning-spinner
            class="slds-spinner_container"
          >
            #shadow-root(open)
              <div
                class="slds-spinner slds-spinner_medium"
                role="status"
              >
                <span
                  class="slds-assistive-text"
                >
                  Loading
                </span>
                <div
                  class="slds-spinner__dot-a"
                />
                <div
                  class="slds-spinner__dot-b"
                />
              </div>
          </lightning-spinner>
          <div
            class="slds-grid slds-gutters_small"
          >
            <div
              class="slds-col slds-has-flexi-truncate"
              role="listitem"
            >
              <lightning-input-field
                class="slds-form-element_1-col"
              >
                #shadow-root(open)
                  <p>
                    Name
                  </p>
              </lightning-input-field>
            </div>
          </div>
          <div
            class="slds-grid slds-gutters_small"
          >
            <div
              class="slds-col slds-has-flexi-truncate"
              role="listitem"
            >
              <lightning-input-field
                class="slds-form-element_1-col"
              >
                #shadow-root(open)
                  <p>
                    BillingAddress
                  </p>
              </lightning-input-field>
            </div>
          </div>
        </div>
        <div
          class="slds-align_absolute-center slds-p-around_medium"
        >
          <lightning-button
            class="slds-m-around_xx-small lightning-record-form-cancel"
          >
            #shadow-root(open)
              <button
                class="slds-button slds-button_neutral"
                name="cancel"
                type="button"
              >
                Cancel
              </button>
          </lightning-button>
          <lightning-button
            class="slds-m-around_xx-small lightning-record-form-submit"
          >
            #shadow-root(open)
              <button
                class="slds-button slds-button_brand"
                name="submit"
                type="submit"
              >
                Save
              </button>
          </lightning-button>
        </div>
      </div>
    </lightning-record-edit-form>
</lightning-record-form>
`;

exports[`record form columns treats a zero value as 1 1`] = `
<lightning-record-form>
  #shadow-root(open)
    <lightning-record-edit-form>
      #shadow-root(open)
        <form>
          <slot />
        </form>
      <div
        class="slds-form"
        role="list"
      >
        <lightning-messages>
          #shadow-root(open)
        </lightning-messages>
        <div
          class="slds-is-relative record-form-spinner-holder"
        >
          <lightning-spinner
            class="slds-spinner_container"
          >
            #shadow-root(open)
              <div
                class="slds-spinner slds-spinner_medium"
                role="status"
              >
                <span
                  class="slds-assistive-text"
                >
                  Loading
                </span>
                <div
                  class="slds-spinner__dot-a"
                />
                <div
                  class="slds-spinner__dot-b"
                />
              </div>
          </lightning-spinner>
          <div
            class="slds-grid slds-gutters_small"
          >
            <div
              class="slds-col slds-has-flexi-truncate"
              role="listitem"
            >
              <lightning-input-field
                class="slds-form-element_1-col"
              >
                #shadow-root(open)
                  <p>
                    Name
                  </p>
              </lightning-input-field>
            </div>
          </div>
          <div
            class="slds-grid slds-gutters_small"
          >
            <div
              class="slds-col slds-has-flexi-truncate"
              role="listitem"
            >
              <lightning-input-field
                class="slds-form-element_1-col"
              >
                #shadow-root(open)
                  <p>
                    BillingAddress
                  </p>
              </lightning-input-field>
            </div>
          </div>
        </div>
        <div
          class="slds-align_absolute-center slds-p-around_medium"
        >
          <lightning-button
            class="slds-m-around_xx-small lightning-record-form-cancel"
          >
            #shadow-root(open)
              <button
                class="slds-button slds-button_neutral"
                name="cancel"
                type="button"
              >
                Cancel
              </button>
          </lightning-button>
          <lightning-button
            class="slds-m-around_xx-small lightning-record-form-submit"
          >
            #shadow-root(open)
              <button
                class="slds-button slds-button_brand"
                name="submit"
                type="submit"
              >
                Save
              </button>
          </lightning-button>
        </div>
      </div>
    </lightning-record-edit-form>
</lightning-record-form>
`;
